[package]
name = "wc-rs"
version = "0.1.2"
authors = ["palash25 <npalash25@gmail.com>"]
edition = "2018"
description = "A faster port of the unix wc"
homepage = "https://palash25.netlify.com/post/writing-technical-content/"
repository = "https://github.com/palash25/wc-rs"
readme = "README.md"
keywords = ["wc", "unix", "tools"]
categories = ["command-line-interface", "command-line-utilities"]
license = "MIT"

[profile.release]
opt-level = 3

[dependencies]
clap = "2.31.2"
ansi_term = "0.12.1"
